version/3.0.4/README.md
## debian-base
**ewsdocker/debian-base** is a version of the *nimmis/ubuntu* docker image modified for use with *Debian 9*.  It adds several system utilities and libraries that are nominally required to properly utilize the *library/debian* docker image, and adds system initialization and supervisor functions for better control.  
____  

## ewsdocker/debian-base Wiki  

Please visit our [ewsdocker/debian-base Wiki](https://github.com/ewsdocker/debian-base/wiki) for complete documentation of this docker image.  
____  

### About Docker Versions  

Find out all that you need to know about the docker Tags, and the version of **ewsdocker/debian-base** represented, at [Docker Tags](https://github.com/ewsdocker/debian-base/wiki/DockerTags).  
_____________________  

**docker pull** will pull the **latest** image by default.  Other versions are available, as follows:

This **edge** image is based on the GitHub **master** source, which is the development version, and quite possibly **unstable**.  

The **stable** version is the most stable version of the most recent **Debian** version.  It may (most likely) not be the newest GitHub version.  

NOTE: If the _New Version_ version number is not in the **Tags**, the **latest** tag is still under test.  Testing will be complete when the _New Version_ tag exists.

Other Docker versions (or tags) can be selected on the Docker [Tags](https://hub.docker.com/r/ewsdocker/debian-base/tags/) page.  

An explanation of the [Docker Tags](https://github.com/ewsdocker/debian-base/wiki/DockerTags) is available on the [ewsdocker/debian-base Wiki](https://github.com/ewsdocker/debian-base/wiki).

____  

**Copyright © 2018. EarthWalk Software.**  
**Licensed under the GNU General Public License, GPL-3.0-or-later.**  

This file is part of **ewsdocker/debian-base**.  

**ewsdocker/debian-base** is free software: you can redistribute 
it and/or modify it under the terms of the GNU General Public License 
as published by the Free Software Foundation, either version 3 of the 
License, or (at your option) any later version.  

**ewsdocker/debian-base** is distributed in the hope that it will 
be useful, but WITHOUT ANY WARRANTY; without even the implied warranty 
of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.  

You should have received a copy of the GNU General Public License
along with **ewsdocker/debian-base**.  If not, see 
<http://www.gnu.org/licenses/>.  
____  
